test/fail_compilation/diag10792.d
/*
TEST_OUTPUT:
---
fail_compilation/diag10792.d(2): Error: semicolon expected to close enum declaration
---
*/

#line 1
enum isPred(T) = asdf
